IL - add API for Export external model to CSV Files
